--- a/scenarios/High Growth.yaml
+++ b/scenarios/High Growth.yaml
@@ -7,6 +7,7 @@ city_area:
   max_value: 5000.0
   value: 825.29
   step: 5.0
+  input_type: "number_input"
 
 initial_city_capacity:
   label: "Initial City Capacity Power (MW)"
@@ -14,6 +15,7 @@ initial_city_capacity:
   max_value: 1000
   value: 55
   step: 1
+  input_type: "number_input"
 
 panel_power:
   label: "Initial Panel Power (W/m²)"
@@ -21,6 +23,7 @@ panel_power:
   max_value: 350
   value: 210
   step: 5
+  input_type: "number_input"
 
 pv_area_percent:
   label: "Maximum PV Area Fraction (as a decimal)"
@@ -29,6 +32,7 @@ pv_area_percent:
   value: 0.010
   step: 0.001
   format: "%.3f"
+  input_type: "number_input"
 
 # -----------------------------------------------------------------------------
 # Sliders Inputs
@@ -41,6 +45,7 @@ panel_gain:
   value: 0.02
   step: 0.001
   format: "%.3f"
+  input_type: "slider"
 
 panel_degradation_factor:
   label: "Panel Degradation (%/year)"
@@ -49,6 +54,7 @@ panel_degradation_factor:
   value: 0.005
   step: 0.001
   format: "%.3f"
+  input_type: "slider"
 
 install_discount:
   label: "Installation Cost Discount Rate"
@@ -56,18 +62,19 @@ install_discount:
   max_value: 0.2
   value: 0.07
   step: 0.01
+  input_type: "slider"
 
 # -----------------------------------------------------------------------------
 # Distributions
 # -----------------------------------------------------------------------------
 
 annual_growth_rate:
-  label: "Annual Growth Rate"
-  min_value: 0.0
+  label: "Annual Growth Factor"
+  min_value: -0.1
   max_value: 1.0
-  p10: 0.05
-  p50: 0.25
-  p90: 0.45
+  p10: 0.01
+  p50: 0.20
+  p90: 0.50
   step: 0.01
 
 capacity_factor:
